--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 		"laravel/framework": "4.2.*",
                 "laracasts/commander": "~1.0",
 		"laracasts/validation": "1.1",
-                "laracasts/flash": "1.0"
+                "laracasts/flash": "~1.0"
                 
 	},
         "require-dev": {
@@ -20,7 +20,6 @@
 		"classmap": [
 			"app/commands",
 			"app/controllers",
-			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
