--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
 		"laravel/framework": "4.2.*",
                 "laracasts/commander": "~1.0",
 		"laracasts/validation": "1.1",
-                "laracasts/flash": "~1.0"
-                
+                "laracasts/flash": "~1.0",
+                "laracasts/presenter" : "0.1.*"                
 	},
         "require-dev": {
 		"way/generators": "~3.0",
@@ -24,9 +24,6 @@
 			"app/database/seeds",
 			"app/tests/TestCase.php"
 		],
-                "files": [
-                    "app/Larabook/helpers.php"
-                ],
                 "psr-4":{
                     "Larabook\\": "app/Larabook"
                 }
